--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 台湾-6.00MB/s(Youtube:不良林), server: 211.23.149.95, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-700.6KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇯🇵 日本-171.9KB/s(Youtube:不良林), server: 185.172.113.106, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.49MB/s(Youtube:不良林), server: 72.140.224.195, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-2.54MB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 未知国家-2.88MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇹🇭 泰国-989.9KB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-852.7KB/s(Youtube:不良林), server: 72.140.224.195, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-545.5KB/s(Youtube:不良林), server: 5.188.0.151, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-302.0KB/s(Youtube:不良林), server: 185.172.113.106, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-2.04MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.90MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.23MB/s(Youtube:不良林), server: 72.140.224.195, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-1.15MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-539.2KB/s(Youtube:不良林), server: 185.172.113.106, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇵🇭 菲律宾-2.25MB/s(Youtube:不良林), server: flb.alinkrelay.com, port: 12000, type: trojan, password: 80114348-eea5-43b3-8705-2da4430d3074, sni: flb.alinkrelay.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-6.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-700.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-171.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 未知国家-2.88MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-989.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-852.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-545.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-302.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
       - 🇯🇵 日本-539.2KB/s(Youtube:不良林)
+      - 🇵🇭 菲律宾-2.25MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 台湾-6.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-700.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-171.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 未知国家-2.88MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-989.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-852.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-545.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-302.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
       - 🇯🇵 日本-539.2KB/s(Youtube:不良林)
+      - 🇵🇭 菲律宾-2.25MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-6.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-700.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-171.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 未知国家-2.88MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-989.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-852.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-545.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-302.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
       - 🇯🇵 日本-539.2KB/s(Youtube:不良林)
+      - 🇵🇭 菲律宾-2.25MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-6.00MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 台湾-6.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-700.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-171.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 未知国家-2.88MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-989.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-852.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-545.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-302.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
       - 🇯🇵 日本-539.2KB/s(Youtube:不良林)
+      - 🇵🇭 菲律宾-2.25MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-6.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-700.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-171.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 未知国家-2.88MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-989.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-852.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-545.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-302.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
       - 🇯🇵 日本-539.2KB/s(Youtube:不良林)
+      - 🇵🇭 菲律宾-2.25MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-6.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-700.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-171.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 未知国家-2.88MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-989.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-852.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-545.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-302.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
       - 🇯🇵 日本-539.2KB/s(Youtube:不良林)
+      - 🇵🇭 菲律宾-2.25MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-6.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-700.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-171.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 未知国家-2.88MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-989.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-852.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-545.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-302.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
       - 🇯🇵 日本-539.2KB/s(Youtube:不良林)
+      - 🇵🇭 菲律宾-2.25MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
