--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇹🇭 泰国-989.9KB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-852.7KB/s(Youtube:不良林), server: 72.140.224.195, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-545.5KB/s(Youtube:不良林), server: 5.188.0.151, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-2.27MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-4.34MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.10MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-697.8KB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-302.0KB/s(Youtube:不良林), server: 185.172.113.106, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-2.04MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.90MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.23MB/s(Youtube:不良林), server: 72.140.224.195, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-1.15MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-539.2KB/s(Youtube:不良林), server: 185.172.113.106, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇵🇭 菲律宾-2.25MB/s(Youtube:不良林), server: flb.alinkrelay.com, port: 12000, type: trojan, password: 80114348-eea5-43b3-8705-2da4430d3074, sni: flb.alinkrelay.com, skip-cert-verify: true}
+  - {name: 波兰-2.22MB/s(Youtube:不良林), server: 217.30.10.63, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
+  - {name: 🇺🇸 美国-384.5KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇹🇭 泰国-989.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-852.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-545.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-697.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-302.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
       - 🇯🇵 日本-539.2KB/s(Youtube:不良林)
       - 🇵🇭 菲律宾-2.25MB/s(Youtube:不良林)
+      - 波兰-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-384.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇹🇭 泰国-989.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-852.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-545.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-697.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-302.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
       - 🇯🇵 日本-539.2KB/s(Youtube:不良林)
       - 🇵🇭 菲律宾-2.25MB/s(Youtube:不良林)
+      - 波兰-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-384.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇹🇭 泰国-989.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-852.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-545.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-697.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-302.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
       - 🇯🇵 日本-539.2KB/s(Youtube:不良林)
       - 🇵🇭 菲律宾-2.25MB/s(Youtube:不良林)
+      - 波兰-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-384.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇹🇭 泰国-989.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-852.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-545.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-697.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-302.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
       - 🇯🇵 日本-539.2KB/s(Youtube:不良林)
       - 🇵🇭 菲律宾-2.25MB/s(Youtube:不良林)
+      - 波兰-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-384.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇹🇭 泰国-989.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-852.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-545.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-697.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-302.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
       - 🇯🇵 日本-539.2KB/s(Youtube:不良林)
       - 🇵🇭 菲律宾-2.25MB/s(Youtube:不良林)
+      - 波兰-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-384.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇹🇭 泰国-989.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-852.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-545.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-697.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-302.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
       - 🇯🇵 日本-539.2KB/s(Youtube:不良林)
       - 🇵🇭 菲律宾-2.25MB/s(Youtube:不良林)
+      - 波兰-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-384.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇹🇭 泰国-989.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-852.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-545.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-697.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-302.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
       - 🇯🇵 日本-539.2KB/s(Youtube:不良林)
       - 🇵🇭 菲律宾-2.25MB/s(Youtube:不良林)
+      - 波兰-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-384.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
