--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,118 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.24MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-171.3KB/s(Youtube:不良林), server: 185.172.113.102, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-384.5KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇭🇰 (已存活8天)香港-2.35MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇺🇸 美国-1.15MB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇦 加拿大-829.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇭🇰 香港-167.6KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇸🇬 新加坡-1.82MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.12MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-717.4KB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
-  - {name: 🇯🇵 日本-2.23MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-249.3KB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-344.4KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-2.44MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-486.6KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-638.6KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇨🇦 加拿大-574.2KB/s(Youtube:不良林), server: 72.140.224.195, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-171.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-384.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-167.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇬🇧 英国-717.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-249.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-486.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-638.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-574.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-171.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-384.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-167.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇬🇧 英国-717.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-249.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-486.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-638.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-574.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-171.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-384.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-167.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇬🇧 英国-717.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-249.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-486.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-638.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-574.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活8天)香港-2.35MB/s(Youtube:不良林)
       - 🇭🇰 香港-167.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-249.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-486.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-171.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-384.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-167.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇬🇧 英国-717.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-249.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-486.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-638.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-574.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-171.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-384.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-167.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇬🇧 英国-717.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-249.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-486.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-638.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-574.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-171.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-384.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-167.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇬🇧 英国-717.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-249.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-486.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-638.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-574.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +132,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-171.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-384.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-167.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇬🇧 英国-717.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-249.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-486.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-638.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-574.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
